Add results and listing components.

--- a/app/assets/stylesheets/titles.scss
+++ b/app/assets/stylesheets/titles.scss
@@ -131,7 +131,6 @@ p {
 }
 
 
-
 .full-name {
   font-weight: bold;
   margin-right: 4px;
@@ -148,4 +147,9 @@ p {
 
 .movie-info p {
   line-height: 1.25em;
+}
+
+.result-img {
+  height: 100px;
+  width: 75px;
 }
